[package]
name = "hello_rust"
version = "0.1.0"
authors = ["admin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
guess_game = { path = "guess_game"}
http_server = { path = "http_server"}
alloc = { path = "alloc"}
slice = { path = "slice"}
data_structure = {path = "data_structure"}
futures = {version = "0.3.12", features = ["thread-pool"]}
chrono = "*"
daemonize = "*"
 ctrlc = "*"