[package]
name = "hello_tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
rustls-pemfile = "1.0.0"
tokio = {version = "1.18.2", features = ["full"]}
tokio-rustls = "0.23.4"
webpki-roots = "0.22"