[package]
name = "hello_yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
wasm-logger = "0.2"
log = "0.4.6"
yew-router = "0.16"
serde = "1.0.137"
yew-agent = "0.1.0"
web-sys = "0.3.57"
