[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper-proxy = "0.9.1"
hyper = { version = "0.14", features = ["client", "http1"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
headers = "0.3"