[package]
name = "rabbit"
version = "0.1.0"
authors = ["admin <admin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-amqp = "1.0.0"
tokio = { version = "1", features = ["full"] }
lapin = "1.7.1"
tracing = "0.1.26"
tracing-subscriber = "0.2"
